# i18n_msgs

./: CHANGELOG.rst  CMakeLists.txt  package.xml
action/: SetLocale.action
srv/: GetLocales.srv
